# python-boxhead-bot

./: .coderabbit.yaml  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  move-to-in-progress.yml
docs/: game-analysis.md
helpers/: capture_screenshots.py  clear_raw_screenshots.py
src/boxhead_bot/: capturer.py  controller.py
tests/: conftest.py  test_capturer.py  test_controller.py
