[project]
name = "boxhead-bot"
version = "0.2.0"
description = "Automated bot for playing Boxhead using Playwright, YOLOv11 and PPO reinforcement learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "opencv-python>=4.13.0.92",
    "playwright>=1.60.0",
    "torch>=2.5",
    "ultralytics>=8.3",
    "stable-baselines3>=2.4",
    "gymnasium>=1.0",
    "structlog>=25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
